refactor: restructure error handling by introducing ApiError and ApiErrorDetail classes