@@ -1,6 +1,7 @@
 package com.historialplus.historialplus.error;
 
-import com.historialplus.historialplus.error.exceptions.NotFoundException;
+import com.historialplus.historialplus.error.dto.ApiError;
+import com.historialplus.historialplus.error.dto.ApiErrorDetail;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -11,89 +12,104 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.context.request.WebRequest;
 
+import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ControllerAdvice
 public class GlobalExceptionHandler {
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<?> handleGlobalException(Exception ex, WebRequest request) {
-        return new ResponseEntity<>(ex.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
+    public ResponseEntity<?> handleGlobalException(Exception ex, WebRequest ignoredRequest) {
+        return ResponseEntity.internalServerError().body(ex.getMessage());
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public ResponseEntity<ApiError> handleValidationExceptions(MethodArgumentNotValidException ex) {
-        List<String> errors = ex.getBindingResult()
-                .getAllErrors()
-                .stream()
-                .map(error -> {
-                    if (error instanceof FieldError) {
-                        return ((FieldError) error).getField() + ": " + error.getDefaultMessage();
-                    } else {
-                        return error.getObjectName() + ": " + error.getDefaultMessage();
-                    }
-                })
-                .collect(Collectors.toList());
+        List<ApiErrorDetail> details = ex.getBindingResult()
+            .getAllErrors()
+            .stream()
+            .map(e -> {
+                String field = e instanceof FieldError ? ((FieldError) e).getField() : e.getObjectName();
+                return ApiErrorDetail.builder()
+                    .field(field)
+                    .message(e.getDefaultMessage())
+                    .build();
+            })
+            .toList();
 
-        ApiError response = new ApiError("VALIDATION_ERROR", "Validation failed", errors);
-        return new ResponseEntity<>(response, HttpStatus.BAD_REQUEST);
-    }
+        ApiError response = ApiError.builder()
+            .code("VALIDATION_ERROR")
+            .message("Validación fallida")
+            .timestamp(LocalDateTime.now())
+            .details(details)
+            .build();
 
-    @ExceptionHandler(NotFoundException.class)
-    @ResponseStatus(HttpStatus.NOT_FOUND)
-    public ResponseEntity<ApiError> handleNotFoundException(NotFoundException ex) {
-        ApiError apiError = new ApiError("NOT_FOUND", ex.getMessage(), Collections.singletonList(ex.getMessage()));
-        return new ResponseEntity<>(apiError, HttpStatus.NOT_FOUND);
+        return ResponseEntity.badRequest().body(response);
     }
 
     @ExceptionHandler(DataIntegrityViolationException.class)
     public ResponseEntity<ApiError> handleDataIntegrityViolationException(DataIntegrityViolationException ex) {
         String message = ex.getMostSpecificCause().getMessage();
 
-        // Procesar el mensaje para hacerlo más amigable
-        String userFriendlyMessage;
+        ApiErrorDetail errorDetail = ApiErrorDetail.builder()
+            .field("dataIntegrityViolation")
+            .message("Error de integridad de datos")
+            .build();
+
         if (message.contains("UK_file_type_name")) {
-            userFriendlyMessage = "El nombre del tipo de archivo ya está en uso";
+            errorDetail.setField("name");
+            errorDetail.setMessage("El nombre del tipo de archivo ya está en uso");
         } else if (message.contains("UK_hospital_email")) {
-            userFriendlyMessage = "El correo electrónico del hospital ya está en uso";
+            errorDetail.setField("email");
+            errorDetail.setMessage("El correo electrónico del hospital ya está en uso");
         } else if (message.contains("UK_hospital_name")) {
-            userFriendlyMessage = "El nombre del hospital ya está en uso";
+            errorDetail.setField("name");
+            errorDetail.setMessage("El nombre del hospital ya está en uso");
         } else if (message.contains("UK_hospital_phone")) {
-            userFriendlyMessage = "El teléfono del hospital ya está en uso";
+            errorDetail.setField("phone");
+            errorDetail.setMessage("El teléfono del hospital ya está en uso");
         } else if (message.contains("UK_hospital_ruc")) {
-            userFriendlyMessage = "El RUC del hospital ya está en uso";
+            errorDetail.setField("ruc");
+            errorDetail.setMessage("El RUC del hospital ya está en uso");
         } else if (message.contains("UK_people_address")) {
-            userFriendlyMessage = "La dirección ya está en uso";
+            errorDetail.setField("address");
+            errorDetail.setMessage("La dirección ya está en uso");
         } else if (message.contains("UK_people_document_number")) {
-            userFriendlyMessage = "El número de documento ya está en uso";
+            errorDetail.setField("documentNumber");
+            errorDetail.setMessage("El número de documento ya está en uso");
         } else if (message.contains("UK_roles_name")) {
-            userFriendlyMessage = "El nombre del rol ya está en uso";
+            errorDetail.setField("name");
+            errorDetail.setMessage("El nombre del rol ya está en uso");
         } else if (message.contains("UK_sex_type_name")) {
-            userFriendlyMessage = "El nombre del tipo de sexo ya está en uso";
+            errorDetail.setField("name");
+            errorDetail.setMessage("El nombre del tipo de sexo ya está en uso");
         } else if (message.contains("UK_states_name")) {
-            userFriendlyMessage = "El nombre del estado ya está en uso";
+            errorDetail.setField("name");
+            errorDetail.setMessage("El nombre del estado ya está en uso");
         } else if (message.contains("UK_type_document_name")) {
-            userFriendlyMessage = "El nombre del tipo de documento ya está en uso";
+            errorDetail.setField("name");
+            errorDetail.setMessage("El nombre del tipo de documento ya está en uso");
         } else if (message.contains("UKa9dydk3dj4qb8cvmjijqnrg5t")) {
-            userFriendlyMessage = "La combinación de usuario y rol ya está en uso";
+            errorDetail.setField("userRole");
+            errorDetail.setMessage("La combinación de usuario y rol ya está en uso");
         } else if (message.contains("UK_users_email")) {
-            userFriendlyMessage = "El correo electrónico del usuario ya está en uso";
+            errorDetail.setField("email");
+            errorDetail.setMessage("El correo electrónico del usuario ya está en uso");
         } else if (message.contains("UK_users_name")) {
-            userFriendlyMessage = "El nombre del usuario ya está en uso";
-        } else {
-            userFriendlyMessage = "Error de integridad de datos";
+            errorDetail.setField("name");
+            errorDetail.setMessage("El nombre del usuario ya está en uso");
         }
 
-        ApiError apiError = new ApiError(
-                "DUPLICATE_ENTRY",
-                userFriendlyMessage,
-                Collections.singletonList(message)
-        );
+        ApiError apiError = ApiError.builder()
+            .code("DATA_INTEGRITY_VIOLATION")
+            .message("Error de integridad de datos")
+            .timestamp(LocalDateTime.now())
+            .details(Collections.singletonList(errorDetail))
+            .build();
 
-        return new ResponseEntity<>(apiError, HttpStatus.CONFLICT);
+        return ResponseEntity.status(HttpStatus.CONFLICT).body(apiError);
     }
 }
 
